--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,11 @@ buildscript {
         jcenter()
         mavenCentral()
         maven {url "https://clojars.org/repo/"}
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
 
@@ -20,6 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral();
         jcenter()
 
     }
