--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.colin.go4lunch">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -11,10 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".controllers.activities.RestaurantDetailActivity" />
         <activity
             android:name=".controllers.activities.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
-        <activity android:name=".controllers.activities.MainActivity"></activity>
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".controllers.activities.MainActivity" />
         <activity android:name=".controllers.activities.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
