--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 google_maps_api="AIzaSyANfhMNNCPsMwPWfrO-rWE1BySPSO8y4ME"
+facebook_application_id="189770198991652"
+fb_login_protocol_scheme="fb189770198991652"
